-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.7.0-beta1
-
aee9cde1602d8360685b0ea60bd69cce24f7e18a
Case in point is createBlock() when profiling samegame. We clearly know the location. It is even displayed, but clicking on it in the statistics view doesn't open the editor at the right place.
| For Gerrit Dashboard: QTCREATORBUG-20501 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 230868,2 | QmlProfiler: In statistics view use source model for location lookup | 4.7 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |