QmlProfiler: In statistics view use source model for location lookup

The sorted model's rows are not equivalent to typeIDs.

Change-Id: I88868e192079f61bd1d336dac98142fd415d9a4a
Task-number: QTCREATORBUG-20501
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>